// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minchoBabelPlugin > accepts enabled jsx css prop mode when JSX has no css prop 1`] = `
[
  "extracted_1vdysta.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$App = style({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > accepts enabled jsx css prop mode when JSX has no css prop 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_1vdysta.css.ts";
import { style } from '@mincho-js/css';
function App() {
  return <div class={_$mincho$$App2}>Hello</div>;
}"
`;

exports[`minchoBabelPlugin > aggregates multiple spreads and className before inline object css prop 1`] = `
[
  "extracted_17cnpin.css.ts",
  "import { css as _css, cx as _cx } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > aggregates multiple spreads and className before inline object css prop 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_17cnpin.css.ts";
import { css as _css, cx as _cx } from "@mincho-js/css";
const a = {
  id: "a"
};
const b = {
  className: "from-b"
};
function App() {
  const _minchoProps = {
    ...a,
    className: "base",
    ...b
  };
  const {
    css: _minchoCssProp,
    className: _minchoClassName,
    ..._minchoRest
  } = _minchoProps;
  return <div {..._minchoRest} className={_cx(_minchoClassName, _$mincho$$App2)} />;
}"
`;

exports[`minchoBabelPlugin > aggregates spread props before explicit class-value css prop 1`] = `
[
  "extracted_48djc5.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > aggregates spread props before explicit class-value css prop 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const styleA = "style-a";
const props = {
  className: "base",
  css: "leaked",
  id: "root"
};
function App() {
  const _minchoProps = {
    ...props
  };
  const {
    css: _minchoCssProp,
    className: _minchoClassName,
    ..._minchoRest
  } = _minchoProps;
  return <div {..._minchoRest} className={_cx(_minchoClassName, styleA)} />;
}"
`;

exports[`minchoBabelPlugin > already exported 1`] = `
[
  "extracted_1etlg14.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: 'red'
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > already exported 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_1etlg14.css.ts";
import { style } from '@mincho-js/css';
export const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > arrow function bindings 1`] = `
[
  "extracted_3jiior.css.ts",
  "import { style } from '@mincho-js/css';
const utility = {
  gap: size => ({
    gap: size
  })
};
export var _$mincho$$red = style({
  ...utility.gap('10px')
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > arrow function bindings 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_3jiior.css.ts";
import { style } from '@mincho-js/css';
const utility = {
  gap: size => ({
    gap: size
  })
};
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > arrow function bindings 3`] = `
[
  "extracted_9iej5n.css.ts",
  "import { style } from '@mincho-js/css';
const getStyles = color => ({
  color
});
export var _$mincho$$red = style({
  ...getStyles('red')
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > arrow function bindings 4`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_9iej5n.css.ts";
import { style } from '@mincho-js/css';
const getStyles = color => ({
  color
});
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > binding ordering 1`] = `
[
  "extracted_ha0lh4.css.ts",
  "import { style } from '@mincho-js/css';
const color = 'red';
export var _$mincho$$red = style({
  color
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > binding ordering 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_ha0lh4.css.ts";
import { style } from '@mincho-js/css';
const color = 'red';
const red = _$mincho$$red2;
const longClass = \`abc \${red}\`;
console.log(longClass);"
`;

exports[`minchoBabelPlugin > classifies first-level primitive jsx css prop array branches 1`] = `
[
  "extracted_1mfmy2m.css.ts",
  "import { css as _css, cx as _cx } from "@mincho-js/css";
export var _$mincho$$App = _css(["base", "active"]);
var _$mincho$$App2 = _$mincho$$App;
export var _$mincho$$App3 = _css(["base", ""]);
var _$mincho$$App4 = _$mincho$$App3;",
]
`;

exports[`minchoBabelPlugin > classifies first-level primitive jsx css prop array branches 2`] = `
"import { _$mincho$$App as _$mincho$$App2, _$mincho$$App3 as _$mincho$$App4 } from "extracted_1mfmy2m.css.ts";
import { css as _css, cx as _cx } from "@mincho-js/css";
const activeClass = "active-class";
const styles = {
  active: "styles-active"
};
const condition = true;
const providedClass = "";
const maybeClass = null;
const suffix = "suffix";
function getClassName() {
  return "called";
}
function App() {
  return <>
            <div className={_$mincho$$App2} />
            <div className={_$mincho$$App4} />
            <div className={_cx("base", false)} />
            <div className={_cx("base", true)} />
            <div className={_cx("base", null)} />
            <div className={_cx("base", undefined)} />
            <div className={_cx("base", 0)} />
            <div className={_cx("base", 1)} />
            <div className={_cx("base", 0n)} />
            <div className={_cx("base", 1n)} />
            <div className={_cx("base", activeClass)} />
            <div className={_cx("base", "", activeClass)} />
            <div className={_cx("base", styles.active)} />
            <div className={_cx("base", getClassName())} />
            <div className={_cx("base", \`active \${suffix}\`)} />
            <div className={_cx("base", condition && "active")} />
            <div className={_cx("base", providedClass || "fallback")} />
            <div className={_cx("base", maybeClass ?? "fallback")} />
            <div className={_cx("base", condition ? "active" : "inactive")} />
            <div className={_cx("external", "base", condition && "active")} />
          </>;
}"
`;

exports[`minchoBabelPlugin > direct-emits string-literal class-value jsx css props 1`] = `
[
  "extracted_fd2g76.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > direct-emits string-literal class-value jsx css props 2`] = `
"const motion = {
  div: "div"
};
function Button(props) {
  return <button {...props} />;
}
function App() {
  return <>
            <div className="base" />
            <div className="base" />
            <div className="" />
            <div className=" " />
            <div className="base active" />
            <Button className="base" />
            <motion.div className="base" />
            <my-element className="base" />
          </>;
}"
`;

exports[`minchoBabelPlugin > export default style 1`] = `
[
  "extracted_w4qxwb.css.ts",
  "import { style } from "@mincho-js/css";
export var _$mincho$$unknown = style({
  color: "red"
});
var _$mincho$$unknown2 = _$mincho$$unknown;",
]
`;

exports[`minchoBabelPlugin > export default style 2`] = `
"import { _$mincho$$unknown as _$mincho$$unknown2 } from "extracted_w4qxwb.css.ts";
import { style } from "@mincho-js/css";
export default _$mincho$$unknown2;"
`;

exports[`minchoBabelPlugin > extracts $mincho function 1`] = `
[
  "extracted_10rbtgw.css.ts",
  "import { mincho$ } from '@mincho-js/css';
export var _$mincho$$red = mincho$(() => {
  return 2 + 2;
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > extracts $mincho function 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_10rbtgw.css.ts";
import { mincho$ } from '@mincho-js/css';
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > extracts first-level CSS-rule branch array branches through cx 1`] = `
[
  "extracted_1evk0ii.css.ts",
  "import { css as _css, cx as _cx } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;
export var _$mincho$$App3 = _css({
  color: "red"
});
var _$mincho$$App4 = _$mincho$$App3;
export var _$mincho$$App5 = _css({
  color: "red"
});
var _$mincho$$App6 = _$mincho$$App5;
export var _$mincho$$App7 = _css([{
  color: "red"
}]);
var _$mincho$$App8 = _$mincho$$App7;
export var _$mincho$$App9 = _css(["active", {
  color: "red"
}]);
var _$mincho$$App0 = _$mincho$$App9;
export var _$mincho$$App1 = _css([{
  color: "red"
}]);
var _$mincho$$App10 = _$mincho$$App1;
export var _$mincho$$App11 = _css(["active", {
  color: "red"
}]);
var _$mincho$$App12 = _$mincho$$App11;
export var _$mincho$$App13 = _css({
  color: "red"
});
var _$mincho$$App14 = _$mincho$$App13;
export var _$mincho$$App15 = _css([{
  color: "red"
}]);
var _$mincho$$App16 = _$mincho$$App15;
export var _$mincho$$App17 = _css({
  color: "red"
});
var _$mincho$$App18 = _$mincho$$App17;
export var _$mincho$$App19 = _css([{
  color: "red"
}]);
var _$mincho$$App20 = _$mincho$$App19;
export var _$mincho$$App21 = _css({
  color: "blue"
});
var _$mincho$$App22 = _$mincho$$App21;
export var _$mincho$$App23 = _css(["fallback", {
  color: "blue"
}]);
var _$mincho$$App24 = _$mincho$$App23;
export var _$mincho$$App25 = _css({
  color: "red"
});
var _$mincho$$App26 = _$mincho$$App25;
export var _$mincho$$App27 = _css({
  color: "blue"
});
var _$mincho$$App28 = _$mincho$$App27;
export var _$mincho$$App29 = _css(["red", {
  color: "red"
}]);
var _$mincho$$App30 = _$mincho$$App29;
export var _$mincho$$App31 = _css(["blue", {
  color: "blue"
}]);
var _$mincho$$App32 = _$mincho$$App31;",
]
`;

exports[`minchoBabelPlugin > extracts first-level CSS-rule branch array branches through cx 2`] = `
"import { _$mincho$$App as _$mincho$$App2, _$mincho$$App3 as _$mincho$$App4, _$mincho$$App5 as _$mincho$$App6, _$mincho$$App7 as _$mincho$$App8, _$mincho$$App9 as _$mincho$$App0, _$mincho$$App1 as _$mincho$$App10, _$mincho$$App11 as _$mincho$$App12, _$mincho$$App13 as _$mincho$$App14, _$mincho$$App15 as _$mincho$$App16, _$mincho$$App17 as _$mincho$$App18, _$mincho$$App19 as _$mincho$$App20, _$mincho$$App21 as _$mincho$$App22, _$mincho$$App23 as _$mincho$$App24, _$mincho$$App25 as _$mincho$$App26, _$mincho$$App27 as _$mincho$$App28, _$mincho$$App29 as _$mincho$$App30, _$mincho$$App31 as _$mincho$$App32 } from "extracted_1evk0ii.css.ts";
import { css as _css, cx as _cx } from "@mincho-js/css";
const activeClass = "active-class";
const condition = true;
const providedClass = "";
const maybeClass = null;
function App() {
  return <>
            <div className={_cx("base", condition && _$mincho$$App2)} />
            <div className={_cx("base", providedClass || _$mincho$$App4)} />
            <div className={_cx("base", maybeClass ?? _$mincho$$App6)} />
            <div className={_cx("base", providedClass || _$mincho$$App8)} />
            <div className={_cx("base", maybeClass ?? _$mincho$$App0)} />
            <div className={_cx("base", condition && _$mincho$$App10)} />
            <div className={_cx("base", condition && _$mincho$$App12)} />
            <div className={_cx("base", _$mincho$$App14, activeClass)} />
            <div className={_cx("base", _$mincho$$App16, condition && "active")} />
            <div className={_cx("base", condition ? _$mincho$$App18 : "inactive")} />
            <div className={_cx("base", condition ? _$mincho$$App20 : "inactive")} />
            <div className={_cx("base", condition ? "active" : _$mincho$$App22)} />
            <div className={_cx("base", condition ? "active" : _$mincho$$App24)} />
            <div className={_cx("base", condition ? _$mincho$$App26 : _$mincho$$App28)} />
            <div className={_cx("base", condition ? _$mincho$$App30 : _$mincho$$App32)} />
          </>;
}"
`;

exports[`minchoBabelPlugin > extracts style function 1`] = `
[
  "extracted_scbqxm.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: "red"
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > extracts style function 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_scbqxm.css.ts";
import { style } from '@mincho-js/css';
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > function declaration bindings 1`] = `
[
  "extracted_vn4szn.css.ts",
  "import { style } from '@mincho-js/css';
function getColor() {
  return 'red';
}
export var _$mincho$$red = style({
  color: getColor()
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > function declaration bindings 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_vn4szn.css.ts";
import { style } from '@mincho-js/css';
function getColor() {
  return 'red';
}
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > function declaration bindings 3`] = `
[
  "extracted_10et0ti.css.ts",
  "import { style } from '@mincho-js/css';
function getStyles(color) {
  return {
    color
  };
}
export var _$mincho$$red = style({
  ...getStyles('red')
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > function declaration bindings 4`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_10et0ti.css.ts";
import { style } from '@mincho-js/css';
function getStyles(color) {
  return {
    color
  };
}
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > global styles 1`] = `
[
  "extracted_dk6d8j.css.ts",
  "import { globalStyle } from '@mincho-js/css';
export var _$mincho$$unknown = globalStyle('html, body', {
  color: 'red'
});
var _$mincho$$unknown2 = _$mincho$$unknown;",
]
`;

exports[`minchoBabelPlugin > global styles 2`] = `
"import { _$mincho$$unknown as _$mincho$$unknown2 } from "extracted_dk6d8j.css.ts";
import { globalStyle } from '@mincho-js/css';
_$mincho$$unknown2;"
`;

exports[`minchoBabelPlugin > hoisting same variable name in different scope 1`] = `
[
  "extracted_tdajrt.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: 'red'
});
var _$mincho$$red2 = _$mincho$$red;
export var _$mincho$$red3 = style({
  color: 'blue'
});
var _$mincho$$red4 = _$mincho$$red3;",
]
`;

exports[`minchoBabelPlugin > hoisting same variable name in different scope 2`] = `
"import { _$mincho$$red as _$mincho$$red2, _$mincho$$red3 as _$mincho$$red4 } from "extracted_tdajrt.css.ts";
import { style } from '@mincho-js/css';
const red = _$mincho$$red2;
console.log(red);
function SomeComponent() {
  const red = _$mincho$$red4;
  console.log(red);
}"
`;

exports[`minchoBabelPlugin > hoists array member 1`] = `
[
  "extracted_vj95yp.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$arr = style({
  color: "red"
});
var _$mincho$$arr2 = _$mincho$$arr;
export var _$mincho$$arr3 = style({
  color: "blue"
});
var _$mincho$$arr4 = _$mincho$$arr3;",
]
`;

exports[`minchoBabelPlugin > hoists array member 2`] = `
"import { _$mincho$$arr as _$mincho$$arr2, _$mincho$$arr3 as _$mincho$$arr4 } from "extracted_vj95yp.css.ts";
import { style } from '@mincho-js/css';
const arr = [1, 2, _$mincho$$arr2, 4, _$mincho$$arr4];
console.log(arr);"
`;

exports[`minchoBabelPlugin > hoists inline expression 1`] = `
[
  "extracted_1czbiel.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$str = style({
  color: "red"
});
var _$mincho$$str2 = _$mincho$$str;",
]
`;

exports[`minchoBabelPlugin > hoists inline expression 2`] = `
"import { _$mincho$$str as _$mincho$$str2 } from "extracted_1czbiel.css.ts";
import { style } from '@mincho-js/css';
const str = \`abc \${_$mincho$$str2}\`;
console.log(str);"
`;

exports[`minchoBabelPlugin > hoists object property 1`] = `
[
  "extracted_1ejonqt.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$key = style({
  color: "red"
});
var _$mincho$$key2 = _$mincho$$key;",
]
`;

exports[`minchoBabelPlugin > hoists object property 2`] = `
"import { _$mincho$$key as _$mincho$$key2 } from "extracted_1ejonqt.css.ts";
import { style } from '@mincho-js/css';
const obj = {
  nested: {
    key: _$mincho$$key2
  }
};
console.log(obj);"
`;

exports[`minchoBabelPlugin > inside block scope 1`] = `
[
  "extracted_tt1y80.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: 'red'
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > inside block scope 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_tt1y80.css.ts";
import { style } from '@mincho-js/css';
{
  const red = _$mincho$$red2;
  console.log(red);
}"
`;

exports[`minchoBabelPlugin > inside jsx expression 1`] = `
[
  "extracted_u92xlr.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$App = style({
  color: 'red'
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > inside jsx expression 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_u92xlr.css.ts";
import { style } from '@mincho-js/css';
function App() {
  return <div class={_$mincho$$App2}>Hello</div>;
}
console.log(red);"
`;

exports[`minchoBabelPlugin > keeps inline object class dictionary syntax in css rule mode 1`] = `
[
  "extracted_1wvwi3h.css.ts",
  "import { css as _css } from "@mincho-js/css";
const isActive = true;
export var _$mincho$$App = _css({
  active: isActive
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > keeps inline object class dictionary syntax in css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_1wvwi3h.css.ts";
import { css as _css } from "@mincho-js/css";
const isActive = true;
function App() {
  return <div className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > keeps mixed literal class-value jsx css props in direct and cx modes 1`] = `
[
  "extracted_ihi0ar.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > keeps mixed literal class-value jsx css props in direct and cx modes 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const styleA = "style-a";
function App() {
  return <>
            <div className="base" />
            <div className={_cx(styleA)} />
          </>;
}"
`;

exports[`minchoBabelPlugin > keeps non-string literal class-value jsx css props through cx 1`] = `
[
  "extracted_gvqbk7.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > keeps non-string literal class-value jsx css props through cx 2`] = `
"import { cx as _cx } from "@mincho-js/css";
function App() {
  return <>
            <div className={_cx(1)} />
            <div className={_cx(false)} />
            <div className={_cx(null)} />
            <div className={_cx(undefined)} />
          </>;
}"
`;

exports[`minchoBabelPlugin > leaves jsx css prop unchanged when css prop lowering is disabled 1`] = `
[
  "extracted_1a9gei1.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > leaves jsx css prop unchanged when css prop lowering is disabled 2`] = `
"function App() {
  return <div css={{
    color: "red"
  }} />;
}"
`;

exports[`minchoBabelPlugin > leaves spread-only runtime css props untransformed 1`] = `
[
  "extracted_1dre7mx.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > leaves spread-only runtime css props untransformed 2`] = `
"const styleA = "style-a";
function App() {
  return <div {...{
    css: styleA
  }} />;
}"
`;

exports[`minchoBabelPlugin > lowers array literal jsx css prop through css rule mode 1`] = `
[
  "extracted_1e65177.css.ts",
  "import { css as _css } from "@mincho-js/css";
export var _$mincho$$App = _css(["base", {
  color: "red"
}]);
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > lowers array literal jsx css prop through css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_1e65177.css.ts";
import { css as _css } from "@mincho-js/css";
function App() {
  return <div className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom component class-value jsx css prop through cx 1`] = `
[
  "extracted_1ypr351.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers custom component class-value jsx css prop through cx 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const styleA = "base";
function Button(props) {
  return <button {...props} />;
}
function App() {
  return <Button className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom component inline object jsx css prop through css rule mode 1`] = `
[
  "extracted_y60r8r.css.ts",
  "import { css as _css } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > lowers custom component inline object jsx css prop through css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_y60r8r.css.ts";
import { css as _css } from "@mincho-js/css";
function Button(props) {
  return <button {...props} />;
}
function App() {
  return <Button className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > lowers custom element class-value jsx css prop through className 1`] = `
[
  "extracted_k5klam.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers custom element class-value jsx css prop through className 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const styleA = "base";
function App() {
  return <my-element className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers explicit cx array and dictionary class values through class-value mode 1`] = `
[
  "extracted_g1q7fc.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers explicit cx array and dictionary class values through class-value mode 2`] = `
"import { cx, cx as _cx } from "@mincho-js/css";
const isActive = true;
function App() {
  return <>
            <div className={_cx(cx(["base", isActive && "active"]))} />
            <div className={_cx(cx({
      active: isActive
    }))} />
            <div className={_cx(cx(["base", {
      active: isActive
    }]))} />
          </>;
}"
`;

exports[`minchoBabelPlugin > lowers identifier css result through cx without double wrapping 1`] = `
[
  "extracted_mcgo2u.css.ts",
  "import { css, cx as _cx } from "@mincho-js/css";
export var _$mincho$$styleA = css({
  color: "red"
});
var _$mincho$$styleA2 = _$mincho$$styleA;",
]
`;

exports[`minchoBabelPlugin > lowers identifier css result through cx without double wrapping 2`] = `
"import { _$mincho$$styleA as _$mincho$$styleA2 } from "extracted_mcgo2u.css.ts";
import { css, cx as _cx } from "@mincho-js/css";
const styleA = _$mincho$$styleA2;
function App() {
  return <div className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > lowers inline object jsx css prop through css rule mode 1`] = `
[
  "extracted_1a9gei1.css.ts",
  "import { css as _css } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > lowers inline object jsx css prop through css rule mode 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_1a9gei1.css.ts";
import { css as _css } from "@mincho-js/css";
function App() {
  return <div className={_$mincho$$App2} />;
}"
`;

exports[`minchoBabelPlugin > lowers member-expression class-value jsx css prop through cx 1`] = `
[
  "extracted_2bu5eg.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > lowers member-expression class-value jsx css prop through cx 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const motion = {
  div: "div"
};
const styleA = "base";
function App() {
  return <motion.div className={_cx(styleA)} />;
}"
`;

exports[`minchoBabelPlugin > merges expression className before class-value css prop 1`] = `
[
  "extracted_i8fczg.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > merges expression className before class-value css prop 2`] = `
"import { cx as _cx } from "@mincho-js/css";
const base = "base";
const styles = {
  root: "root"
};
function App() {
  return <div className={_cx(base, styles.root)} />;
}"
`;

exports[`minchoBabelPlugin > merges string literal className before generated css rule class 1`] = `
[
  "extracted_ucbrq2.css.ts",
  "import { css as _css, cx as _cx } from "@mincho-js/css";
export var _$mincho$$App = _css({
  color: "red"
});
var _$mincho$$App2 = _$mincho$$App;",
]
`;

exports[`minchoBabelPlugin > merges string literal className before generated css rule class 2`] = `
"import { _$mincho$$App as _$mincho$$App2 } from "extracted_ucbrq2.css.ts";
import { css as _css, cx as _cx } from "@mincho-js/css";
function App() {
  return <div className={_cx("base", _$mincho$$App2)} />;
}"
`;

exports[`minchoBabelPlugin > mincho-ignore doesn't extract expression 1`] = `
[
  "extracted_x37u6f.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: "red"
});
var /* mincho-ignore */_$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > mincho-ignore doesn't extract expression 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_x37u6f.css.ts";
import { style } from '@mincho-js/css';
const red = /* mincho-ignore */_$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > mincho-ignore on parent node 1`] = `
[
  "extracted_1ria1l2.css.ts",
  "import { globalStyle } from '@mincho-js/css';

/* mincho-ignore */
export var _$mincho$$unknown = globalStyle("html", {
  color: 'red'
});
var _$mincho$$unknown2 = _$mincho$$unknown;",
]
`;

exports[`minchoBabelPlugin > mincho-ignore on parent node 2`] = `
"import { _$mincho$$unknown as _$mincho$$unknown2 } from "extracted_1ria1l2.css.ts";
import { globalStyle } from '@mincho-js/css';

/* mincho-ignore */
_$mincho$$unknown2;"
`;

exports[`minchoBabelPlugin > move bindings along with extracted style 1`] = `
[
  "extracted_1ps44e0.css.ts",
  "import { style } from '@mincho-js/css';
const redColor = 'red';
export var _$mincho$$red = style({
  color: redColor
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > move bindings along with extracted style 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_1ps44e0.css.ts";
import { style } from '@mincho-js/css';
const redColor = 'red';
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > multiple variable declarators in one declaration 1`] = `
[
  "extracted_qqccj2.css.ts",
  "import { style } from '@mincho-js/css';
export var _$mincho$$red = style({
  color: 'red'
});
var _$mincho$$red2 = _$mincho$$red;
export var _$mincho$$blue = style({
  color: 'blue'
});
var _$mincho$$blue2 = _$mincho$$blue;
export var _$mincho$$green = style({
  color: 'green'
});
var _$mincho$$green2 = _$mincho$$green;",
]
`;

exports[`minchoBabelPlugin > multiple variable declarators in one declaration 2`] = `
"import { _$mincho$$red as _$mincho$$red2, _$mincho$$blue as _$mincho$$blue2, _$mincho$$green as _$mincho$$green2 } from "extracted_qqccj2.css.ts";
import { style } from '@mincho-js/css';
const red = _$mincho$$red2,
  blue = _$mincho$$blue2,
  green = _$mincho$$green2;
console.log(red, blue, green);"
`;

exports[`minchoBabelPlugin > nested bindings 1`] = `
[
  "extracted_1xp9y13.css.ts",
  "import { style } from '@mincho-js/css';
const theme = {
  color: 'red'
};
const themeColor = theme.color;
const color = themeColor;
export var _$mincho$$red = style({
  color
});
var _$mincho$$red2 = _$mincho$$red;",
]
`;

exports[`minchoBabelPlugin > nested bindings 2`] = `
"import { _$mincho$$red as _$mincho$$red2 } from "extracted_1xp9y13.css.ts";
import { style } from '@mincho-js/css';
const theme = {
  color: 'red'
};
const themeColor = theme.color;
const color = themeColor;
const red = _$mincho$$red2;
console.log(red);"
`;

exports[`minchoBabelPlugin > non-Mincho styled calls are ignored 1`] = `
[
  "extracted_17gu07x.css.ts",
  "",
]
`;

exports[`minchoBabelPlugin > non-Mincho styled calls are ignored 2`] = `
"import { styled } from '@emotion/styled';
const Button = styled("button", {
  color: 'red'
});
const Link = styled.a({
  color: 'blue'
});
console.log(Button, Link);"
`;

exports[`minchoBabelPlugin > react styled components get converted to runtime 1`] = `
[
  "extracted_1q59b9y.css.ts",
  "import { rules as _rules } from "@mincho-js/css";
export var _$mincho$$Button = _rules({
  base: {
    color: 'red'
  }
});
var _$mincho$$Button2 = _$mincho$$Button;
export var _$mincho$$Link = _rules({
  base: {
    color: 'blue'
  }
});
var _$mincho$$Link2 = _$mincho$$Link;",
]
`;

exports[`minchoBabelPlugin > react styled components get converted to runtime 2`] = `
"import { _$mincho$$Button as _$mincho$$Button2, _$mincho$$Link as _$mincho$$Link2 } from "extracted_1q59b9y.css.ts";
import { rules as _rules } from "@mincho-js/css";
import { $$styled as _$$styled } from "@mincho-js/react/runtime";
const Button = /* @__PURE__ */_$$styled("button", _$mincho$$Button2);
const Link = /* @__PURE__ */_$$styled("a", _$mincho$$Link2);
console.log(Button, Link);"
`;

exports[`minchoBabelPlugin > same binding in multiple declarations 1`] = `
[
  "extracted_141089g.css.ts",
  "import { style } from '@mincho-js/css';
const color = 'red';
export var _$mincho$$foreground = style({
  color
});
var _$mincho$$foreground2 = _$mincho$$foreground;
export var _$mincho$$background = style({
  background: color
});
var _$mincho$$background2 = _$mincho$$background;",
]
`;

exports[`minchoBabelPlugin > same binding in multiple declarations 2`] = `
"import { _$mincho$$foreground as _$mincho$$foreground2, _$mincho$$background as _$mincho$$background2 } from "extracted_141089g.css.ts";
import { style } from '@mincho-js/css';
const color = 'red';
const foreground = _$mincho$$foreground2;
const background = _$mincho$$background2;
console.log(foreground, background);"
`;
